fix: DUP headsign overflow with stops-away status
When a DUP departures widget transitioned from having no "stops-away"
departures to having one, and the available space for headsigns was
thus reduced, headsign abbreviation was not re-evaluated. As a result,
the stops-away status could visually overlap the headsign.

Because this only occurs on data refresh, not initial page load, and
because real DUP hardware never performs a data refresh, this problem
was specific to Screenplay/admin UI. Therefore no new DUP package deploy
is needed to safely revert 4cd102c3, which is done here.

Summary of changes:

* Fix the issue at hand by integrating the "do we have reduced space
  for headsigns" variable into the React `key` for departure rows. This
  causes them to re-render and redo abbreviation.

* Simplify the abbreviation logic by using `white-space: nowrap` and
  only checking for X overflow, instead of hard-coding an expected line
  height and using that to effectively check for Y overflow.

* Add `Government Center` ➡️ `Government Ctr` as an unconditional
  headsign replacement. "Center" never fits in the available space,
  which caused it to always be abbreviated all the way to `Govt Ctr`
  since 847ffdab.

* Add types to variables that were implicitly `any`.

* Remove styles for an unused class.

--- a/assets/css/dup/departures/destination.scss
+++ b/assets/css/dup/departures/destination.scss
@@ -5,6 +5,7 @@
   width: 1176px;
   font-size: 138px;
   color: colors.$cool-black-15;
+  white-space: nowrap;
   vertical-align: middle;
 
   .departures-section--shortened-headsigns & {
@@ -16,12 +17,5 @@
   font-size: 138px;
   font-weight: 600;
   line-height: 1em;
-  color: black;
-}
-
-.departure-destination__variation {
-  font-size: 48px;
-  font-weight: 400;
-  line-height: 48px;
   color: black;
 }
